Revert "Merge branch 'dev/1.20.2' into main"
This reverts commit cae64f6f69bf91c1f2bee550ca4e608762e58b5e.